--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta http-equiv="Content-Language" content="fr" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>MathALÉA</title>
 </head>
 
-<body class="flex-col h-full w-full font-sans">
+<body class="flex-col h-full w-full font-sans touch-manipulation">
   <div id="appMathalea">
     <div id="loading" class="hidden">
       <!-- <div class="loader">
